objects/TW1_Dependente__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Conta_Associada__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conta Associada</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dependentes</relationshipLabel>
        <relationshipName>Dependentes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Nascimento__c</fullName>
        <label>Nascimento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Parentesco__c</fullName>
        <label>Parentesco</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Filho(a)</fullName>
                </value>
                <value>
                    <fullName>Pai</fullName>
                </value>
                <value>
                    <fullName>Mãe</fullName>
                </value>
                <value>
                    <fullName>Neto(a)</fullName>
                </value>
                <value>
                    <fullName>Tio(a)</fullName>
                </value>
                <value>
                    <fullName>Avó</fullName>
                </value>
                <value>
                    <fullName>Avô</fullName>
                </value>
                <value>
                    <fullName>Sobrinho(a)</fullName>
                </value>
                <value>
                    <fullName>Cônjuge</fullName>
                </value>
                <value>
                    <fullName>Madrasta</fullName>
                </value>
                <value>
                    <fullName>Padrasto</fullName>
                </value>
                <value>
                    <fullName>Enteado(a)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Sexo__c</fullName>
        <label>Sexo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Dependente</label>
    <nameField>
        <label>Nome do Dependente</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dependentes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>